--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">FirebaseAuth</string>
     <string name="facebook_app_id">1047444262892205</string>
-    <string name="fb_login_protocol_scheme">fb1234</string>
+    <string name="fb_login_protocol_scheme">fb1047444262892205</string>
     <string name="facebook_client_token">6f48596c674d426fc5a891f725ce61a7</string>
 </resources>
